kubernetes/main/core/security/authelia/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  egress:
    - toFQDNs:
        - matchName: time.cloudflare.com
      toPorts:
        - ports:
            - port: '123'
              protocol: 'UDP'
